retryable_writes_direct_write_to_config_transactions.js doesn't expect a direct transactions collection write to fail

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.6
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2018-11-19
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The manual config.transactions write test under retryable_writes_direct_write_to_config_transactions.js should expect that the second manual write to the session's entry might fail, because the first write is still in the process of invalidating the session asynchronously.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: