src/mongo/db/session_catalog.h
@@ -251,7 +251,6 @@ class OperationContextSession {
 
 public:
     OperationContextSession(OperationContext* opCtx, bool checkOutSession);
-
     ~OperationContextSession();
 
     /**
